--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -1,17 +1,21 @@
 <div class="container">
   <div class="card shadow mb-4">
     <div class="card-body">
-      <table>
+      <table class="table table-striped">
         <thead>
         <tr>
-          <th>
-            Liste des produits
-          </th>
+          <th>ID</th>
+          <th>Nom</th>
+          <th>Prix</th>
+          <th>Date</th>
         </tr>
         </thead>
         <tbody *ngFor="let produit of produits">
         <tr>
-          <td>{{produit}}</td>
+          <td>{{produit.id}}</td>
+          <td>{{produit.nom}}</td>
+          <td>{{produit.prix}}</td>
+          <td>{{produit.dateCreation| date:'dd/MM/yyyy'}}</td>
         </tr>
         </tbody>
       </table>
