suppression et mise a jour des produit , gestion des route avec app routing

--- a/src/app/add-produit/add-produit.component.html
+++ b/src/app/add-produit/add-produit.component.html
@@ -1,1 +1,28 @@
-<p>add-produit works!</p>
+<div class="container">
+  <h2>Ajouter un produit</h2>
+
+  <form>
+    <div class="mb-3">
+      <label for="id" class="form-label">Identifiant</label>
+      <input type="text" [(ngModel)]="newProduit.id" class="form-control" id="id" name="id">
+    </div>
+    <div class="mb-3">
+      <label for="nom" class="form-label">Nom du produit</label>
+      <input type="text" [(ngModel)]= "newProduit.nom" class="form-control" id="nom" name="nom">
+    </div>
+    <div class="mb-3">
+      <label for="prix" class="form-label">Prix</label>
+      <input type="text" [(ngModel)]= "newProduit.prix" class="form-control" id="prix" name="prix">
+    </div>
+    <div class="mb-3">
+      <label for="date" class="form-label">Prix</label>
+      <input type="date" [(ngModel)]= "newProduit.dateCreation" class="form-control" id="date" name="dateCreation">
+    </div>
+
+    <button type="submit" (click)="addProduit()" class="btn btn-success">Ajouter</button>
+    <div>
+      <h3>{{message}}</h3>
+    </div>
+  </form>
+
+</div>
