consommation des api rest a l'aide de httpClient

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,15 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Posts
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" routerLink="/add-post">Ajouter</a></li>
+            <li><a class="dropdown-item" routerLink="/posts">Lister</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             [username]
           </a>
